# hgr

./: README.md  gesture_detector.py  info_readme.md  intro.txt  main.py  nettest.py  nora1.py  pyproject.toml  requirements.txt  run_server.py  server.py  test_api.py  test_hand.py  test_request.py  test_system.py
docs/: QUICKSTART.md  SERVER_SETUP.md
hardware/esp32/: CameraWebServer.ino
hardware/nodeMCU/: esp8622_wifi_with_dh11_with_pir_buzeer.ino
nodeMCU/: motion.html  new_motion_code.html  tp1.html
static/: app.js  esp32_app.js  style.css  voice_bot.js
templates/: gesture_esp32.html  index.html  landing.html  voice_bot.html
